2002-02-01  Toon Moene  <toon@moene.indiv.nluug.nl>
	* bad.def: Remove non-historical reference to version 0.6.
	* bugs.texi: Ditto.
	* com.c: Ditto.
	* ffe.texi: Ditto.
	* proj.h: Ditto.
	* g77.texi: Ditto.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49413 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,12 @@
+2002-02-01  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* bad.def: Remove non-historical reference to version 0.6.
+	* bugs.texi: Ditto.
+	* com.c: Ditto.
+	* ffe.texi: Ditto.
+	* proj.h: Ditto.
+	* g77.texi: Ditto.
+
 2002-01-31  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* g77spec.c (lang_specific_driver): Follow GNU Coding Standards
