* cfganal.c: Include tm_p.h. 	(keep_with_call_p): Fix the test that determines if a register holds 	the return value of a call.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49415 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-01  Janis Johnson  <janis187@us.ibm.com>
+
+	* cfganal.c: Include tm_p.h.
+	(keep_with_call_p): Fix the test that determines if a register holds
+	the return value of a call.
+
 2002-02-01  DJ Delorie  <dj@redhat.com>
 
 	* config/sparc/sparc.c (sparc_emit_set_symbolic_const64): If
