--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-02  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/5304:
+	* expmed.c (expand_mult_highpart): Use immed_double_const for wide_op1
+	unconditionally.
+
 2002-02-01  Janis Johnson  <janis187@us.ibm.com>
 
 	* cfganal.c: Include tm_p.h.
