--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-02  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/execute/20020201-1.c: New test.
+
 2002-02-01  Janis Johnson  <janis187@us.ibm.com>
 
 	PR target/5469
