--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-02  Nic Ferrier  <nferrier@tapsellferrier.co.uk>
+
+	* gcj.texi (About CNI): New node.
+
 2002-02-01  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	PR java/5080
