* c-decl.c, tree.c, tree.h, objc/objc-act.c: Revert bitfield 	patch. 	* gcc.dg/bitfld-1.c: Update. 	* gcc.dg/bitfld-2.c: Update. 	* gcc.c-torture/execute/bitfld-1.x: New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49420 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-02  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* c-decl.c, tree.c, tree.h, objc/objc-act.c: Revert bitfield
+	patch.
+
 2002-02-02  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386.h (CPP_CPUCOMMON_SPEC): Add missing | separators.
