* gcc.dg/20020201-2.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49421 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-02  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20020201-2.c: New test.
+
 2002-02-02  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* gcc.dg/bitfld-1.c: Update.
