--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-02-01  Eric Christopher  <echristo@redhat.com>
+
+	From Daniel Jacobowitz <dmj+@andrew.cmu.edu>
+	* config/mips/mips.h (FUNCTION_PROFILER): Fix function profiling.
+	* config/mips/linux.h (ASM_OUTPUT_REG_PUSH): Undefine.
+	(ASM_OUTPUT_REG_POP): Ditto.
+
 2002-02-02  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* c-decl.c, tree.c, tree.h, objc/objc-act.c: Revert bitfield
@@ -52,7 +59,7 @@
         (movqi): Likewise.
         * config/stormy16/stormy16.h (PREDICATE_CODES): Add
         nonimmediate_nonstack_operand.
-        * config/stormy16/stormy16.c (nonimmediate_nonstack_operand): 
+        * config/stormy16/stormy16.c (nonimmediate_nonstack_operand):
         New.
         * config/stormy16/stormy16-protos.h (nonimmediate_nonstack_operand)
         New.
