2002-02-01  Adam Megacz <adam@xwt.org>
        * configure.in: Added support for mingw.
        * java/lang/Win32Process.java: Created as empty file.
        * java/lang/natWin32Process.cc: Created as empty file.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49425 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-01  Adam Megacz <adam@xwt.org>
+
+	* configure.in: Added support for mingw.
+	* java/lang/Win32Process.java: Created as empty file.
+	* java/lang/natWin32Process.cc: Created as empty file.
+
 2002-02-01  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
 	PR java/4972
