--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,13 @@
+2002-02-01  Adam Megacz
+
+        * win32-threads.cc:
+        (_Jv_CondWait, _Jv_CondNotify, _Jv_CondNotifyAll): Corrected
+        wait() algorithm to make it safe.
+        (ensure_condvar_initialized, _Jv_CondInit, _Jv_CondDestroy):
+        Added lazy creation of Win32 Events for better performance
+        (really_start): This now uses GC_CreateThread so boehm-gc
+        knows about new threads even when statically linked.
+
 2002-02-01  Adam Megacz <adam@xwt.org>
 
         * include/win32-threads.h (_Jv_ConditionVariable_t): Now a struct, to
