Contribute regression tester scripts
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49432 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-31  Geoffrey Keating  <geoffk@redhat.com>
+
+	* MAINTAINERS: Put self in as maintainer for contrib/regression
+	directory.
+
 2002-01-28  Phil Edwards  <pme@gcc.gnu.org>
 
 	* MAINTAINERS:  Update my email address.
