* java/lang/natPosixProcess.cc (myclose): New function. 	(fail): Use it. 	(startProcess): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49433 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-01  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/natPosixProcess.cc (myclose): New function.
+	(fail): Use it.
+	(startProcess): Likewise.
+
 2002-02-01  Adam Megacz <adam@xwt.org>
 
 	* prims.cc: Added #undef STRICT after #include<windows.h>.
