* java/io/natFile.cc: Removed old "FIXME" comments.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49434 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-02  Tom Tromey  <tromey@redhat.com>
+
+	* java/io/natFile.cc: Removed old "FIXME" comments.
+
 2002-02-01  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/natPosixProcess.cc (myclose): New function.
