* gcc.c-torture/execute/bitfld-2.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49438 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -4,6 +4,8 @@
 
 	* gcc.dg/20020201-3.c: New test.
 
+	* gcc.c-torture/execute/bitfld-2.c: New test.
+
 2002-02-02  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* gcc.dg/bitfld-1.c: Update.
