--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -1222,14 +1222,14 @@
 
 (define_expand "xorhi3"
   [(set (match_operand:HI 0 "register_operand" "")
-	(xor:HI (match_operand:HI 1 "general_operand" "")
+	(xor:HI (match_operand:HI 1 "register_operand" "")
 		(match_operand:HI 2 "nonmemory_operand" "")))]
   ""
   "")
 
 (define_insn ""
   [(set (match_operand:HI 0 "register_operand" "=r,r")
-	(xor:HI (match_operand:HI 1 "general_operand" "%0,0")
+	(xor:HI (match_operand:HI 1 "register_operand" "%0,0")
 		(match_operand:HI 2 "nonmemory_operand" "J,rn")))]
   "TARGET_H8300"
   "* return output_logical_op (HImode, XOR, operands);"
@@ -1238,7 +1238,7 @@
 
 (define_insn ""
   [(set (match_operand:HI 0 "register_operand" "=r,r,r")
-	(xor:HI (match_operand:HI 1 "general_operand" "%0,0,0")
+	(xor:HI (match_operand:HI 1 "register_operand" "%0,0,0")
 		(match_operand:HI 2 "nonmemory_operand" "J,r,n")))]
   "TARGET_H8300H || TARGET_H8300S"
   "* return output_logical_op (HImode, XOR, operands);"
