--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-02-02  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.md (one_cmpl patterns): Tighten the
+	predicates of operands[1].  Split the patterns for each
+	processor variant.
+
+2002-02-02  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.md (xor patterns): Tighten the predicates
 	of operands[1] to register_operand.
 
