* Makefile.in: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49447 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-02  Tom Tromey  <tromey@redhat.com>
+
+	* Makefile.in: Rebuilt.
+
 2002-02-02  Jason Merrill  <jason@redhat.com>
 
 	* Makefile.am (clean-nat): New target.
