--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2002-02-03  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	* g77.f-torture/compile/pr3743.f: Delete
+	* g77.dg/pr3743-1.f: New test.
+	* g77.dg/pr3743-2.f: New test.
+	* g77.dg/pr3743-3.f: New test.
+	* g77.dg/pr3743-4.f: New test.
+
 2002-02-02  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* gcc.dg/cpp/uchar-1.c, uchar-2.c, uchar-3.c: New tests.
