--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-02  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.c (hand_list): Move inside function_arg.
+
+2002-02-02  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.c (h8_push_ops): Move inside
 	h8300_init_once.
 	(h8_pop_ops): Likewise.
