--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-03  Toon Moene  <toon@moene.indiv.nluug.nl>
+
+	* g77.f-torture/execute/5122.f: New test for regressions
+	against PR fortran/5122.
+
 2002-02-03  David Billinghurst <David.Billinghurst@riotinto.com>
 
 	* g77.f-torture/compile/pr3743.f: Delete
