--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -13,7 +13,7 @@
 
 2001-10-24  Neil Booth  <neil@daikokuya.demon.co.uk>
 
-	* include/safe-ctype.h (_sch_isbasic, IS_ISOBASIC): New.
+	* safe-ctype.h (_sch_isbasic, IS_ISOBASIC): New.
 
 2001-10-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
