--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-03  Andrew Cagney  <ac131313@redhat.com>
+
+	* gcc.dg/Wswitch.c: New test.
+	PR gcc/4475. PR gcc/3780.
+
 2002-02-03  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* g77.f-torture/execute/5122.f: New test for regressions
