--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-04  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* parse.y (java_expand_classes): Fix typo in static field loop.
+
 2002-02-02  Richard Henderson  <rth@redhat.com>
 
 	* class.c (add_field): Mark static fields external.
