2002-02-04  Anthony Green  <green@redhat.com>
	* output.h (SECTION_OVERRIDE): Define.
	* varasm.c (named_section): Obey SECTION_OVERRIDE.

java:
2002-02-04  Anthony Green  <green@redhat.com>

	* class.c (build_utf8_ref): Put UTF-8 constants into merged
	sections if available.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49469 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-04  Anthony Green  <green@redhat.com>
+
+	* output.h (SECTION_OVERRIDE): Define.
+	* varasm.c (named_section): Obey SECTION_OVERRIDE.
+
 2002-02-03  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* config.gcc (arm*-*-netbsdelf*): Placeholder to prevent match
