--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* combine.c (recog_for_combine): Create a dummy insn with PATTERN
+	pat for recog.
+
 2002-02-04  Hartmut Penner  <hpenner@de.ibm.com>
 
         * varasm.c (decode_rtx_const): Allow unspec (symbol_ref) in
