--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-04  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20020201-4.c: New test.
+
 2002-02-04  Ben Elliston  <bje@redhat.com>
 
 	* lib/gcc.exp (gcc_init): Check that the need_status_wrapper
