* config/i386/i386.md (movsf_1): Allow moving SF values in MMX 	registers.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49474 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-04  Jakub Jelinek  <jakub@redhat.com>
 
+	* config/i386/i386.md (movsf_1): Allow moving SF values in MMX
+	registers.
+
+2002-02-04  Jakub Jelinek  <jakub@redhat.com>
+
 	* combine.c (recog_for_combine): Create a dummy insn with PATTERN
 	pat for recog.
 
