--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-04  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* gcc/config/s390/s390.h (CRT_CALL_STATIC_FUNCTION): Fixed
+	register names for regular asm () construct.
+
 2002-02-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/i386/i386.md (movsf_1): Allow moving SF values in MMX
