--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -867,7 +867,7 @@
   [(set (match_dup 2) (match_dup 3))
    (set (match_dup 0) (mem:TI (match_dup 2)))]
   "operands[2] = operand_subword (operands[0], 1, 0, TImode);
-   operands[3] = XEXP (operands[1], 0);")
+   operands[3] = legitimize_la_operand (XEXP (operands[1], 0));")
 
 ;
 ; movdi instruction pattern(s).
@@ -1022,7 +1022,7 @@
   [(set (match_dup 2) (match_dup 3))
    (set (match_dup 0) (mem:DI (match_dup 2)))]
   "operands[2] = operand_subword (operands[0], 1, 0, DImode);
-   operands[3] = XEXP (operands[1], 0);")
+   operands[3] = legitimize_la_operand (XEXP (operands[1], 0));")
 
 ;
 ; movsi instruction pattern(s).
@@ -1305,7 +1305,7 @@
   [(set (match_dup 2) (match_dup 3))
    (set (match_dup 0) (mem:DI (match_dup 2)))]
   "operands[2] = operand_subword (operands[0], 1, 0, DFmode);
-   operands[3] = XEXP (operands[1], 0);")
+   operands[3] = legitimize_la_operand (XEXP (operands[1], 0));")
 
 ;
 ; movsf instruction pattern(s).
@@ -3093,23 +3093,6 @@
   [(set_attr "op_type"  "RRE,RI,RXE")
    (set_attr "atype"    "reg,reg,mem")])
 
-;
-; For weakness of reload, need (set (reg x) (plus (reg y) (reg x)))
-;
-
-(define_insn "adddi3_inv_64"
-  [(set (match_operand:DI 0 "register_operand" "=d,d,d")
-        (plus:DI (match_operand:DI 1 "general_operand" "%d,K,m")
-                 (match_operand:DI 2 "register_operand" "0,0,0") ) )
-   (clobber (reg:CC 33))]
-  "TARGET_64BIT"
-  "@
-   agr\\t%0,%1
-   aghi\\t%0,%h1
-   ag\\t%0,%1"
-  [(set_attr "op_type" "RRE,RI,RXE")
-   (set_attr "atype"   "reg,reg,mem")])
-
 (define_insn "adddi3_31"
   [(set (match_operand:DI 0 "register_operand" "=d,d")
         (plus:DI (match_operand:DI 1 "register_operand" "0,0")
@@ -3156,8 +3139,8 @@
   DONE;		
 }")
 
-(define_insn "reload_load_address"
-  [(set (match_operand:DI 0 "register_operand" "=a")
+(define_insn "*la_64"
+  [(set (match_operand:DI 0 "register_operand" "=d")
         (match_operand:QI 1 "address_operand" "p"))]
   "TARGET_64BIT"
   "la\\t%0,%a1"      
@@ -3165,65 +3148,24 @@
    (set_attr "atype"   "mem")
    (set_attr "type"    "la")])
 
-(define_insn "*reload_load_address_reg_0"
-  [(set (match_operand:DI 0 "register_operand" "=d")
-        (plus:DI (match_operand:DI 1 "register_operand" "%0")
-                 (match_operand:DI 2 "register_operand" "d")))]
+(define_expand "reload_indi"
+  [(parallel [(match_operand:DI 0 "register_operand" "=a")
+              (match_operand:DI 1 "s390_plus_operand" "")
+              (match_operand:DI 2 "register_operand" "=&a")])]
   "TARGET_64BIT"
-  "brxlg\\t%0,%2,.+6"
-  [(set_attr "op_type" "RIE")
-   (set_attr "atype"   "reg")])
-
-(define_insn "*reload_la_64"
-  [(set (match_operand:DI 0 "register_operand" "=d")
-        (plus:DI (match_operand:DI 1 "general_operand" "g")
-                 (match_operand:DI 2 "general_operand" "g")))]
-  "TARGET_64BIT && reload_in_progress
-   && !address_operand (gen_rtx_PLUS (DImode, operands[1], operands[2]), QImode)
-   && !rtx_equal_p (operands[0], operands[1])
-   && !rtx_equal_p (operands[0], operands[2])"
-  "#")
-
-(define_split
-  [(set (match_operand:DI 0 "register_operand" "")
-        (plus:DI (match_operand:DI 1 "general_operand" "")
-                 (match_operand:DI 2 "register_operand" "")))]
-  "TARGET_64BIT && reload_completed
-   && !address_operand (gen_rtx_PLUS (DImode, operands[1], operands[2]), QImode)
-   && !rtx_equal_p (operands[0], operands[1])
-   && !rtx_equal_p (operands[0], operands[2])"
-  [(set (match_dup 0) (match_dup 1))
-   (set (match_dup 0) (plus:DI (match_dup 0) (match_dup 2)))]
   "
 {
-  if (CONSTANT_P (operands[1]) 
-      && !legitimate_reload_constant_p (operands[1]))
-    operands[1] = force_const_mem (DImode, operands[1]);
+  s390_expand_plus_operand (operands[0], operands[1], operands[2]);
+  DONE;
 }")
 
-(define_split
-  [(set (match_operand:DI 0 "register_operand" "")
-        (plus:DI (match_operand:DI 1 "register_operand" "")
-                 (match_operand:DI 2 "general_operand" "")))]
-  "TARGET_64BIT && reload_completed
-   && !address_operand (gen_rtx_PLUS (DImode, operands[1], operands[2]), QImode)
-   && !rtx_equal_p (operands[0], operands[1])
-   && !rtx_equal_p (operands[0], operands[2])"
-  [(set (match_dup 0) (match_dup 2))
-   (set (match_dup 0) (plus:DI (match_dup 0) (match_dup 1)))]
-  "
-{
-  if (CONSTANT_P (operands[2]) 
-      && !legitimate_reload_constant_p (operands[2]))
-    operands[2] = force_const_mem (DImode, operands[2]);
-}")
  
 ;
 ; addsi3 instruction pattern(s).
 ;
 
 (define_insn "*la_ccclobber"
-  [(set (match_operand:SI 0 "register_operand" "=a")
+  [(set (match_operand:SI 0 "register_operand" "=d")
         (match_operand:QI 1 "address_operand"  "p"))
    (clobber (reg:CC 33))]
   "legitimate_la_operand_p (operands[1])"
@@ -3231,23 +3173,6 @@
    [(set_attr "op_type"  "RX")
     (set_attr "atype"    "mem")
     (set_attr "type"     "la")])
-
-(define_insn "*addaddr_ccclobber"
-  [(set (match_operand:SI 0 "register_operand" "=d,d")
-        (plus:SI (match_operand:SI 1 "register_operand" "%a,a")
-                 (match_operand:SI 2 "nonmemory_operand" "J,a")))
-   (clobber (reg:CC 33))]
-  "(((REGNO (operands[1]) == STACK_POINTER_REGNUM ) ||
-     (REGNO (operands[1]) == FRAME_POINTER_REGNUM ) ||	
-     (REGNO (operands[1]) == BASE_REGISTER)) && 
-        (GET_CODE (operands[2]) == REG ||
-	 CONST_OK_FOR_LETTER_P (INTVAL (operands[2]),'J')))"
-  "@
-   la\\t%0,%c2(,%1)
-   la\\t%0,0(%1,%2)"
-  [(set_attr "op_type"  "RX")
-   (set_attr "atype"    "mem")
-   (set_attr "type"     "la")])
 
 (define_insn "*addsi3_cc"
   [(set (reg 33) 
@@ -3301,67 +3226,24 @@
   [(set_attr "op_type"  "RR,RI,RX")
    (set_attr "atype"    "reg,reg,mem")])
 
-(define_insn "*la"
-  [(set (match_operand:SI 0 "register_operand" "=a")
+(define_insn "*la_31"
+  [(set (match_operand:SI 0 "register_operand" "=d")
         (match_operand:QI 1 "address_operand" "p"))]
-  "reload_in_progress || reload_completed
-   || legitimate_la_operand_p (operands[1])"
+  "legitimate_la_operand_p (operands[1])"
   "la\\t%0,%a1"
   [(set_attr "op_type"  "RX")
    (set_attr "atype"    "mem")
    (set_attr "type"     "la")])
 
-(define_insn "*do_la_reg_0"
-  [(set (match_operand:SI 0 "register_operand" "=d")
-        (plus:SI (match_operand:SI 1 "register_operand" "%0")
-                 (match_operand:SI 2 "register_operand" "d")))]
-  "reload_in_progress || reload_completed"
-  "brxle\\t%0,%2,.+4"
-  [(set_attr "op_type" "RSI")
-   (set_attr "atype"   "reg")])
-
-(define_insn "*reload_la_31"
-  [(set (match_operand:SI 0 "register_operand" "=d")
-        (plus:SI (match_operand:SI 1 "general_operand" "g")
-                 (match_operand:SI 2 "general_operand" "g")))]
-  "reload_in_progress
-   && !address_operand (gen_rtx_PLUS (SImode, operands[1], operands[2]), QImode)
-   && !rtx_equal_p (operands[0], operands[1])
-   && !rtx_equal_p (operands[0], operands[2])"
-  "#")
-
-(define_split
-  [(set (match_operand:SI 0 "register_operand" "")
-        (plus:SI (match_operand:SI 1 "general_operand" "")
-                 (match_operand:SI 2 "register_operand" "")))]
-  "reload_completed
-   && !address_operand (gen_rtx_PLUS (SImode, operands[1], operands[2]), QImode)
-   && !rtx_equal_p (operands[0], operands[1])
-   && !rtx_equal_p (operands[0], operands[2])"
-  [(set (match_dup 0) (match_dup 1))
-   (set (match_dup 0) (plus:SI (match_dup 0) (match_dup 2)))]
+(define_expand "reload_insi"
+  [(parallel [(match_operand:SI 0 "register_operand" "=a")
+              (match_operand:SI 1 "s390_plus_operand" "")
+              (match_operand:SI 2 "register_operand" "=&a")])]
+  "!TARGET_64BIT"
   "
 {
-  if (CONSTANT_P (operands[1]) 
-      && !legitimate_reload_constant_p (operands[1]))
-    operands[1] = force_const_mem (SImode, operands[1]);
-}")
-
-(define_split
-  [(set (match_operand:SI 0 "register_operand" "")
-        (plus:SI (match_operand:SI 1 "register_operand" "")
-                 (match_operand:SI 2 "general_operand" "")))]
-  "reload_completed
-   && !address_operand (gen_rtx_PLUS (SImode, operands[1], operands[2]), QImode)
-   && !rtx_equal_p (operands[0], operands[1])
-   && !rtx_equal_p (operands[0], operands[2])"
-  [(set (match_dup 0) (match_dup 2))
-   (set (match_dup 0) (plus:SI (match_dup 0) (match_dup 1)))]
-  "
-{
-  if (CONSTANT_P (operands[2]) 
-      && !legitimate_reload_constant_p (operands[2]))
-    operands[2] = force_const_mem (SImode, operands[2]);
+  s390_expand_plus_operand (operands[0], operands[1], operands[2]);
+  DONE;
 }")
 
 
