--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-04  Philipp Thomas  <pthomas@suse.de>
 
+	* implic.c lex.c stb.c ste.c stu.c: Update copyright dates.
+
+2002-02-04  Philipp Thomas  <pthomas@suse.de>
+
 	* bad.def com.c expr.c implic.c lex.c stb.c ste.c stu.c:
 	Insert comments to mark messages as not being printf style
 	where appropriate.
