* gcc.dg/cast-qual-2.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49482 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-04  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gcc.dg/cast-qual-2.c: New test.
+
 2002-02-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20020201-4.c: New test.
