--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,7 +1,13 @@
+2002-02-04  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.pot: Regenerate.
+
 2002-01-31  Philipp Thomas  <pthomas@suse.de>
+
 	* el.po: New file.
 
 2002-01-29  Philipp Thomas  <pthomas@suse.de>
+
 	* es.po, fr.po, ja.po: Updated to current versions.
 
 2002-01-23  Philipp Thomas  <pthomas@suse.de>
